fairway-sf/force-app/main/default/objects/Golfer_Profile__c/Golfer_Profile__c.object-meta.xml
<CustomObject>
    <label>Golfer Profile</label>
    <pluralLabel>Golfer Profiles</pluralLabel>
    <description>The Golfer360 performance identity for a Contact: handicap, tendencies, and rolled-up performance stats.</description>
    <nameField>
        <label>Golfer Profile Name</label>
        <type>AutoNumber</type>
        <displayFormat>GP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>