fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/AI_Coaching_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Coaching_Enabled__c</fullName>
    <label>AI Coaching Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>