fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Average_Driver_Carry__c.field-meta.xml
<CustomField>
    <fullName>Average_Driver_Carry__c</fullName>
    <label>Average Driver Carry (yds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>