fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Avg_Handicap_Trend__c.field-meta.xml
<CustomField>
    <fullName>Avg_Handicap_Trend__c</fullName>
    <label>Avg Handicap (Rolling 10)</label>
    <description>Rolling average handicap across last 10 sessions.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>