fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Golfer_Profiles</relationshipName>
    <relationshipLabel>Golfer Profiles</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>One Golfer Profile per golfer Contact.</description>
</CustomField>