fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Current_Focus__c.field-meta.xml
<CustomField>
    <fullName>Current_Focus__c</fullName>
    <label>Current Focus</label>
    <type>Text</type>
    <length>255</length>
</CustomField>