fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Favorite_Club__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Club__c</fullName>
    <label>Favorite Club</label>
    <description>Most-used club by shot count across all sessions.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>