fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Founding_Member_Badge__c.field-meta.xml
<CustomField>
    <fullName>Founding_Member_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this golfer holds a Founding Member membership tier.</description>
    <label>Founding Member</label>
    <type>Checkbox</type>
</CustomField>