fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Handicap__c.field-meta.xml
<CustomField>
    <fullName>Handicap__c</fullName>
    <label>Handicap</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>