fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Least_Consistent_Club__c.field-meta.xml
<CustomField>
    <fullName>Least_Consistent_Club__c</fullName>
    <label>Least Consistent Club</label>
    <type>Text</type>
    <length>50</length>
</CustomField>