fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Lifetime_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Sessions__c</fullName>
    <label>Lifetime Sessions</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>