fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Lifetime_Shots__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Shots__c</fullName>
    <label>Lifetime Shots</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
</CustomField>