fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Member_PIN__c.field-meta.xml
<CustomField>
    <fullName>Member_PIN__c</fullName>
    <label>Member PIN</label>
    <description>4-digit PIN used to authenticate a member at the lobby kiosk check-in screen. Not a substitute for full authentication — used only to confirm identity at the physical device.</description>
    <inlineHelpText>Enter a 4-digit numeric PIN the member will use to check in at the kiosk. Set by staff or the member via their portal.</inlineHelpText>
    <type>Text</type>
    <length>4</length>
</CustomField>