fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Most_Consistent_Club__c.field-meta.xml
<CustomField>
    <fullName>Most_Consistent_Club__c</fullName>
    <label>Most Consistent Club</label>
    <type>Text</type>
    <length>50</length>
</CustomField>