fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Most_Played_Course__c.field-meta.xml
<CustomField>
    <fullName>Most_Played_Course__c</fullName>
    <label>Most Played Course</label>
    <type>Text</type>
    <length>80</length>
</CustomField>