fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Preferred_Practice_Mode__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Practice_Mode__c</fullName>
    <label>Preferred Practice Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Range</fullName><default>false</default><label>Range</label></value>
            <value><fullName>Simulated Round</fullName><default>false</default><label>Simulated Round</label></value>
            <value><fullName>Lesson</fullName><default>false</default><label>Lesson</label></value>
            <value><fullName>Fitting</fullName><default>false</default><label>Fitting</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>