fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Profile_Tier__c.field-meta.xml
<CustomField>
    <fullName>Profile_Tier__c</fullName>
    <label>Profile Tier</label>
    <description>Identifies whether this golfer is a free walk-in/guest, a paying member, or a founding member. Drives upsell prompts on the kiosk and access to full stats history.</description>
    <inlineHelpText>Free = walk-in or guest with basic stat tracking. Member = active paying member. Founding = charter founding member with complimentary access.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
                <default>true</default>
                <label>Free</label>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Founding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>