fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Skill_Segment__c.field-meta.xml
<CustomField>
    <fullName>Skill_Segment__c</fullName>
    <label>Skill Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Beginner</fullName><default>false</default><label>Beginner</label></value>
            <value><fullName>Intermediate</fullName><default>false</default><label>Intermediate</label></value>
            <value><fullName>Advanced</fullName><default>false</default><label>Advanced</label></value>
            <value><fullName>Competitive</fullName><default>false</default><label>Competitive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>