fairway-sf/force-app/main/default/objects/Golfer_Profile__c/fields/Typical_Miss__c.field-meta.xml
<CustomField>
    <fullName>Typical_Miss__c</fullName>
    <label>Typical Miss</label>
    <type>Text</type>
    <length>100</length>
</CustomField>